Fixed some HTML formatting problems.

--- a/test/html/certificate.html
+++ b/test/html/certificate.html
@@ -67,8 +67,7 @@
                                                 </div>
                                                 <div class="colon">:</div>
                                                 <div class="value">
-                                                    <pre class="element text">
-"SHA512"</pre>
+                                                    <pre class="element text">"SHA512"</pre>
                                                 </div>
                                             </div>
                                             <div class="association">
@@ -77,8 +76,7 @@
                                                 </div>
                                                 <div class="colon">:</div>
                                                 <div class="value">
-                                                    <pre class="element text">
-"ED25519"</pre>
+                                                    <pre class="element text">"ED25519"</pre>
                                                 </div>
                                             </div>
                                         </div>
