--- a/test/html/components.html
+++ b/test/html/components.html
@@ -115,14 +115,13 @@
                                             <div class="element version">v1.2.3</div>
                                         </div>
                                         <div class="item">
-                                            <pre class="element text">
-"
-"
+                                            <pre class="element text">"
+    "
         nested
         multiline
         text
     "
-    "</pre>
+"</pre>
                                         </div>
                                         <div class="item">
                                             <pre class="element binary">0110101101010001(encoding: base02)</pre>
@@ -158,16 +157,13 @@
                                             <div class="list">
                                                 <div class="type">List</div>
                                                 <div class="item">
-                                                    <pre class="element text">
-"one"</pre>
+                                                    <pre class="element text">"one"</pre>
                                                 </div>
                                                 <div class="item">
-                                                    <pre class="element text">
-"two"</pre>
+                                                    <pre class="element text">"two"</pre>
                                                 </div>
                                                 <div class="item">
-                                                    <pre class="element text">
-"three"</pre>
+                                                    <pre class="element text">"three"</pre>
                                                 </div>
                                             </div>
                                         </div>
@@ -222,8 +218,7 @@
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <pre class="element text">
-"a"</pre>
+                                        <pre class="element text">"a"</pre>
                                     </div>
                                 </div>
                                 <div class="association">
@@ -232,8 +227,7 @@
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <pre class="element text">
-"b"</pre>
+                                        <pre class="element text">"b"</pre>
                                     </div>
                                 </div>
                                 <div class="association">
@@ -242,14 +236,12 @@
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <pre class="element text">
-"c"</pre>
+                                        <pre class="element text">"c"</pre>
                                     </div>
                                 </div>
                                 <div class="association">
                                     <div class="key" style="width:35ch">
-                                        <pre class="element text">
-"1."</pre>
+                                        <pre class="element text">"1."</pre>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
@@ -258,8 +250,7 @@
                                 </div>
                                 <div class="association">
                                     <div class="key" style="width:35ch">
-                                        <pre class="element text">
-"iffy"</pre>
+                                        <pre class="element text">"iffy"</pre>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
@@ -268,8 +259,7 @@
                                 </div>
                                 <div class="association">
                                     <div class="key" style="width:35ch">
-                                        <pre class="element text">
-".0"</pre>
+                                        <pre class="element text">".0"</pre>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
@@ -386,13 +376,11 @@
                                 </div>
                                 <div class="association">
                                     <div class="key" style="width:35ch">
-                                        <pre class="element text">
-"key"</pre>
+                                        <pre class="element text">"key"</pre>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <pre class="element text">
-"value" (mediaType: "text")</pre>
+                                        <pre class="element text">"value" (mediaType: "text")</pre>
                                     </div>
                                 </div>
                                 <div class="association">
@@ -440,12 +428,10 @@
                                         <div class="list">
                                             <div class="type">Queue</div>
                                             <div class="item">
-                                                <pre class="element text">
-"short"</pre>
+                                                <pre class="element text">"short"</pre>
                                             </div>
                                             <div class="item">
-                                                <pre class="element text">
-"sequence"</pre>
+                                                <pre class="element text">"sequence"</pre>
                                             </div>
                                         </div><div class="parameters">
                                         <div class="type">Parameters</div><div class="association">
@@ -621,24 +607,19 @@ DW411WRC0YS71NWKA93S
                             <div class="list">
                                 <div class="type">List</div>
                                 <div class="item">
-                                    <pre class="element text">
-"simple"</pre>
+                                    <pre class="element text">"simple"</pre>
                                 </div>
                                 <div class="item">
-                                    <pre class="element text">
-"This is a sentence."</pre>
+                                    <pre class="element text">"This is a sentence."</pre>
                                 </div>
                                 <div class="item">
-                                    <pre class="element text">
-"This contains a \"quoted\" word."</pre>
+                                    <pre class="element text">"This contains a \"quoted\" word."</pre>
                                 </div>
                                 <div class="item">
-                                    <pre class="element text">
-"This contains a \n new line character."</pre>
+                                    <pre class="element text">"This contains a \n new line character."</pre>
                                 </div>
                                 <div class="item">
-                                    <pre class="element text">
-"This contains a {procedure}."</pre>
+                                    <pre class="element text">"This contains a {procedure}."</pre>
                                 </div>
                             </div>
                         </div>
