--- a/test/html/examples.html
+++ b/test/html/examples.html
@@ -79,8 +79,7 @@
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <pre class="element text">
-"Cool Deals R Us"</pre>
+                                        <pre class="element text">"Cool Deals R Us"</pre>
                                     </div>
                                 </div>
                             </div>
@@ -103,8 +102,7 @@
                                             </div>
                                             <div class="colon">:</div>
                                             <div class="value">
-                                                <pre class="element text">
-"Hover Battery Packs"</pre>
+                                                <pre class="element text">"Hover Battery Packs"</pre>
                                             </div>
                                         </div>
                                         <div class="association">
@@ -145,8 +143,7 @@
                                             </div>
                                             <div class="colon">:</div>
                                             <div class="value">
-                                                <pre class="element text">
-"Hover Board"</pre>
+                                                <pre class="element text">"Hover Board"</pre>
                                             </div>
                                         </div>
                                         <div class="association">
