--- a/test/html/test.html
+++ b/test/html/test.html
@@ -15,8 +15,7 @@
                         </div>
                         <div class="colon">:</div>
                         <div class="value">
-                            <pre class="element text">
-"Jane Austen"</pre>
+                            <pre class="element text">"Jane Austen"</pre>
                         </div>
                     </div>
                     <div class="association">
@@ -28,16 +27,13 @@
                             <div class="list">
                                 <div class="type">List</div>
                                 <div class="item">
-                                    <pre class="element text">
-"Elizabeth Bennet"</pre>
+                                    <pre class="element text">"Elizabeth Bennet"</pre>
                                 </div>
                                 <div class="item">
-                                    <pre class="element text">
-"Emma Woodhouse"</pre>
+                                    <pre class="element text">"Emma Woodhouse"</pre>
                                 </div>
                                 <div class="item">
-                                    <pre class="element text">
-"Elinor Dashwood"</pre>
+                                    <pre class="element text">"Elinor Dashwood"</pre>
                                 </div>
                             </div>
                         </div>
