--- a/test/html/agents.html
+++ b/test/html/agents.html
@@ -23,8 +23,7 @@
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <pre class="element text">
-"bar"</pre>
+                                        <pre class="element text">"bar"</pre>
                                     </div>
                                 </div>
                                 <div class="association">
@@ -36,8 +35,7 @@
                                         <div class="list">
                                             <div class="type">List</div>
                                             <div class="item">
-                                                <pre class="element text">
-"
+                                                <pre class="element text">"
     Error
     at new Exception (/Users/derk/Development/..c/abstractions/Component.js:412:38)
     at Object.exception (/Users/derk/Developme..omponent-framework/index.js:369:16)
@@ -80,8 +78,7 @@
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <pre class="element text">
-"bar"</pre>
+                                        <pre class="element text">"bar"</pre>
                                     </div>
                                 </div>
                                 <div class="association">
@@ -98,8 +95,7 @@
                                                 </div>
                                                 <div class="colon">:</div>
                                                 <div class="value">
-                                                    <pre class="element text">
-"baw"</pre>
+                                                    <pre class="element text">"baw"</pre>
                                                 </div>
                                             </div>
                                             <div class="association">
@@ -111,8 +107,7 @@
                                                     <div class="list">
                                                         <div class="type">List</div>
                                                         <div class="item">
-                                                            <pre class="element text">
-"
+                                                            <pre class="element text">"
     at REPL32:1:79
     at Script.runInThisContext (node:vm:129:12)
     at REPLServer.defaultEval (node:repl:522:29)
@@ -262,8 +257,7 @@
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <pre class="element text">
-"This is a string..."</pre>
+                                        <pre class="element text">"This is a string..."</pre>
                                     </div>
                                 </div>
                             </div>
